Fixed links in footer

--- a/index.html
+++ b/index.html
@@ -230,22 +230,24 @@
       <div class="footer-content container">
         <p>Copyright &copy; 2021 Frank Auletto. All Rights Reserved.</p>
         <div class="social-links">
-          <a href="mailto:fauletto@gmail.com">
+          <a href="mailto:fauletto@gmail.com" target="_blank">
             <i class="fas fa-envelope envelope"></i>
           </a>
-          <a href="https://twitter.com/fauletto"
+          <a href="https://twitter.com/fauletto" target="_blank"
             ><i class="fab fa-twitter twitter"></i
           ></a>
-          <a href="https://github.com/fauletto"
+          <a href="https://github.com/fauletto" target="_blank"
             ><i class="fab fa-github github"></i
           ></a>
-          <a href="https://www.instagram.com/fauletto/"
+          <a href="https://www.instagram.com/fauletto/" target="_blank"
             ><i class="fab fa-instagram instagram"></i
           ></a>
-          <a href="https://www.freecodecamp.org/fauletto"
+          <a href="https://www.freecodecamp.org/fauletto" target="_blank"
             ><i class="fab fa-free-code-camp"></i
           ></a>
-          <a href="https://glitch.com/@fauletto"><i class="fas fa-fish"></i></a>
+          <a href="https://glitch.com/@fauletto" target="_blank"
+            ><i class="fas fa-fish"></i
+          ></a>
         </div>
       </div>
     </footer>
