Updated email address. Added new project to projects section.

--- a/index.html
+++ b/index.html
@@ -166,20 +166,18 @@
             </div>
           </a>
           <a
-            href="https://technical-documention-fauletto.glitch.me/"
+            href="https://gzcl-dice-gainz-fauletto.glitch.me/"
             class="project-tile"
             target="_blank"
           >
             <div class="project-img">
               <img
-                src="img/portfolio-imgs/technical-thumb.png"
-                alt="C# Technical Documentation"
+                src="img/portfolio-imgs/gzcl-dice-gainz-thumb.png"
+                alt="GZCL Dice Gainz App"
               />
             </div>
             <div class="project-text">
-              <p class="project-text-title padding-1">
-                C# Technical Documentation
-              </p>
+              <p class="project-text-title padding-1">GZCL Dice Gainz App</p>
             </div>
           </a>
           <a
@@ -230,7 +228,7 @@
       <div class="footer-content container">
         <p>Copyright &copy; 2021 Frank Auletto. All Rights Reserved.</p>
         <div class="social-links">
-          <a href="mailto:fauletto@gmail.com" target="_blank">
+          <a href="mailto:frank.auletto@gmail.com" target="_blank">
             <i class="fas fa-envelope envelope"></i>
           </a>
           <a href="https://twitter.com/fauletto" target="_blank"
