Added LinkedIn link. Changed social link order.

--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
           <a href="mailto:frank.auletto@gmail.com" target="_blank">
             <i class="fas fa-envelope envelope"></i>
           </a>
-          <a href="https://twitter.com/fauletto" target="_blank"
-            ><i class="fab fa-twitter twitter"></i
+          <a href="https://www.linkedin.com/in/fauletto/" target="_blank"
+            ><i class="fab fa-linkedin-in"></i
           ></a>
           <a href="https://github.com/fauletto" target="_blank"
             ><i class="fab fa-github github"></i
           ></a>
-          <a href="https://www.instagram.com/fauletto/" target="_blank"
-            ><i class="fab fa-instagram instagram"></i
+          <a href="https://twitter.com/fauletto" target="_blank"
+            ><i class="fab fa-twitter twitter"></i
           ></a>
           <a href="https://www.freecodecamp.org/fauletto" target="_blank"
             ><i class="fab fa-free-code-camp"></i
